allmsisdn/k8s-allmsisdn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allmsisdn-deployment
  namespace: ms-middleware
  labels:
    event: allmsisdn
  annotations:
    path-url-project-properties: otecel/G-Microservicios/G-MSComponents/APL-MSCustomerCheckInvoice/-/tree/master/allmsisdn/src/main/resources
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      event: allmsisdn
  template:
    metadata:
      labels:
        event: allmsisdn
    spec:
      containers:
        - 
          image: 10.112.230.33:443/telefonica/g-microservicios/allmsisdn:1.0.0-qa
          name: allmsisdn
          imagePullPolicy: Always
          securityContext:
            runAsGroup: 1000
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 128Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /opt/ms/allmsisdn/application.properties
              subPath: application.properties      
            - name: ms-logs-volume
              mountPath: /opt/log/
            - name: config-volume-log
              mountPath: /opt/ms/allmsisdn/log4j2.xml
              subPath: log4j2.xml
      volumes:
        - name: ms-logs-volume
          hostPath:
            path: /datos/logs/ms/
        - name: config-volume
          configMap:
            name: allmsisdn-configmap
        - name: config-volume-log
          configMap:
            name: allmsisdn-configmap-log

---
apiVersion: v1
kind: Service
metadata:
  name: allmsisdn-service
  namespace: ms-middleware
  labels:
    event: allmsisdn
spec:
  ports:
    -
      port: 8080
      targetPort: 8080
  selector:
    event: allmsisdn
